k8s/applications/webnut/deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: webnut
spec:
  replicas: 1
  template:
    spec:
      nodeSelector:
        kubernetes.io/arch: amd64
      containers:
        - name: webnut
          image: teknologist/webnut:0.1
          ports:
            - name: http
              containerPort: 6543
