k8s/applications/webnut/ingress.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: webnut-external
  annotations:
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host("nut.mchill.io")
      kind: Rule
      services:
        - name: webnut
          port: 6543
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: webnut-internal
  annotations:
    kubernetes.io/ingress.class: traefik-internal
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host("nut.mchill.lan")
      kind: Rule
      services:
        - name: webnut
          port: 6543
